[package]
name = "jupiter-invariant"
version = "0.1.0"
edition = "2021"
description = "Jupiter Invariant Integration"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.26.0"
anyhow = "1.0"
borsh = "0.9.3"
invariant-types = { git = "https://github.com/invariant-labs/protocol.git", branch = "master" }
jupiter = { git = "https://github.com/sarmatdev/rust-amm-implementation.git", rev = "1d02a43" }
jupiter-core = { git = "https://github.com/sarmatdev/rust-amm-implementation.git", rev = "1d02a43" }
rust_decimal = "1.30.0"
solana-client = "1.14.11"
solana-sdk = "1.14.11"
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
